bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
  print (10<=a<=20)
                ^